client/main.css
/* ... */
@media (max-width: 767px) {
  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
    color: #ffffff;
  }
  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
  .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
    color: #0072dc;
    background-color: transparent;
  }
  .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
    color: #0072dc;
    background-color: transparent;
  }
  .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a,
  .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover,
  .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:focus {
    color: rgba(255, 255, 255, 0.5);
    background-color: transparent;
  }
}
.navbar-default .navbar-link {
  color: #ffffff;
}
.navbar-default .navbar-link:hover {
  color: #0072dc;
}
.navbar-default .btn-link {
  color: #ffffff;
}
.navbar-default .btn-link:hover,
.navbar-default .btn-link:focus {
  color: #0072dc;
}
.navbar-default .btn-link[disabled]:hover,
fieldset[disabled] .navbar-default .btn-link:hover,
.navbar-default .btn-link[disabled]:focus,
fieldset[disabled] .navbar-default .btn-link:focus {
  color: rgba(255, 255, 255, 0.5);
}
.navbar-inverse {
  background-color: #222222;
  border-color: #080808;
}
.navbar-inverse .navbar-brand {
  color: #9d9d9d;
}
.navbar-inverse .navbar-brand:hover,
.navbar-inverse .navbar-brand:focus {
  color: #ffffff;
  background-color: transparent;
}
.navbar-inverse .navbar-text {
  color: #9d9d9d;
}
.navbar-inverse .navbar-nav > li > a {
  color: #9d9d9d;
}
.navbar-inverse .navbar-nav > li > a:hover,
.navbar-inverse .navbar-nav > li > a:focus {
  color: #ffffff;
  background-color: transparent;
}
.navbar-inverse .navbar-nav > .active > a,
.navbar-inverse .navbar-nav > .active > a:hover,
.navbar-inverse .navbar-nav > .active > a:focus {
  color: #ffffff;
  background-color: #080808;
}
.navbar-inverse .navbar-nav > .disabled > a,
.navbar-inverse .navbar-nav > .disabled > a:hover,
.navbar-inverse .navbar-nav > .disabled > a:focus {
  color: #444444;
  background-color: transparent;
}
.navbar-inverse .navbar-toggle {
  border-color: #333333;
}
.navbar-inverse .navbar-toggle:hover,
.navbar-inverse .navbar-toggle:focus {
  background-color: #333333;
}
.navbar-inverse .navbar-toggle .icon-bar {
  background-color: #ffffff;
}
.navbar-inverse .navbar-collapse,
.navbar-inverse .navbar-form {
  border-color: #101010;
}
.navbar-inverse .navbar-nav > .open > a,
.navbar-inverse .navbar-nav > .open > a:hover,
.navbar-inverse .navbar-nav > .open > a:focus {
  background-color: #080808;
  color: #ffffff;
}
@media (max-width: 767px) {
  .navbar-inverse .navbar-nav .open .dropdown-menu > .dropdown-header {
    border-color: #080808;
  }
  .navbar-inverse .navbar-nav .open .dropdown-menu .divider {
    background-color: #080808;
  }
  .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
    color: #9d9d9d;
  }
  .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
  .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
    color: #ffffff;
    background-color: transparent;
  }
  .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a,
  .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:hover,
  .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:focus {
    color: #ffffff;
    background-color: #080808;
  }
  .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a,
  .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a:hover,
  .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a:focus {
    color: #444444;
    background-color: transparent;
  }
}
@media (max-width: 1024px) {
  .sidebar__menu{background-color: #fff}
  .navbar-fixed-top .nav > li{display: inline-block}
}
.sidebar__btn .fa-lg{vertical-align:0}
.banner{border:4px solid #fff;margin:-32px -40px;height:120px}
.avatar-photo{clear:both;top:-40px;margin-bottom:18px;position:relative}
  .avatar-photo img{border-radius:50%;border:4px solid #fff;display:block;margin:0 auto -40px;top:-40px;width:104px;height:104px}
.avatar-small{padding:10px!important}
  .avatar-small img{border-radius:50%;box-shadow:0 0 0 3px #f2f2f2;width:50px;height:50px}
.marging-top{margin-top:0}
.stat {
    list-style: none;
    border-radius: 4px;
    margin:0;
}
.fa{margin:1px} /* search icon fix */
.stat > li {
    display: inline-block;
}
.stat > li + li::before{
    padding: 0 10px;
    content: "\00b7";
}
.number{font-weight:bold;width:100%}
.label{font-family:Helvetica,Arial,sans-serif;display:inline;padding:.2em .6em .3em;font-size:11px;font-weight:700;
    line-height:1;color:#fff;text-align:center;white-space:nowrap;vertical-align:baseline;border-radius:.25em}
.label-default {
    background-color: #e0e0e0;
    color: #494949;
    padding: 4px 8px;
}
.fa-lock{margin-right:8px}
.card-nexus{margin:0}
.card-nexus-no-border{height:20px}
.card-nexus-border{border-left:1px solid #f2f2f2;height:24px}
.card-nexus-info{border-left:1px solid #f2f2f2}
    .card-nexus-info .content{padding:10px}
.card-nexus-start{margin-top:24px}
    .card-nexus-start .card-nexus-info .content{margin-top:-24px}
.card-nexus-the-end .card-nexus-info{height:24px}
    .card-nexus-the-end p a:hover{text-decoration:none}
    .card-nexus-the-end .content{padding-bottom:24px}
.card-nexus-info-icon{color:#eee;position:relative;right:51px;margin-right:-16px}
.card-nexus-info .content{padding-left:32px}
.card-footer{margin:24px -12px 0}
  .card-footer button{color:#555;padding:0 18px;text-transform:none}
    .card-footer button:hover{background-color:transparent;color:#0072dc}
    .card-footer .fa{margin-right:5px}
.modal-content .card-footer{margin:20px -10px 0}
.modal-title small{position:relative;top:-1px}

.ticket-btn,.modal-footer a{color:#555;padding:12px}
.nav-tabs{margin:0 0 -1px}
/* ... */

